Changes to be committed: 	modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; color: hsl(0, 0%, 100%) }
     .attribution a { color: hsl(0, 0%, 100%); }
@@ -20,20 +18,20 @@
     Coded by <a href="#">Akpowenre OgagaOghene</a>.
   </div>
 
-  <div class="container">
+  <main class="container">
     <img src="./assets/images/avatar-jessica.jpeg" alt="">
     <div class="text-container">
       <h3>Jessica Randall</h3>
-      <h5>London, United Kingdom</h5>
+      <h4>London, United Kingdom</h4>
       <p>"Front-end developer and avid reader."</p>
     </div>
     <div class="btn">
-      <button><a href="">GitHub</a></button>
-      <button><a href="">Frontend Mentor</a></button>
-      <button><a href="">LinkedIn</a></button>
-      <button><a href="">Twitter</a></button>
-      <button><a href="">Instagram</a></button>
+      <button>GitHub</button>
+      <button>Frontend Mentor</button>
+      <button>LinkedIn</button>
+      <button>Twitter</button>
+      <button>Instagram</button>
     </div>
-  </div>
+  </main>
 </body>
 </html>
